force-app/main/default/objects/RC_Business_Event__c/RC_Business_Event__c.object-meta.xml
<CustomObject>
    <label>Business Event</label>
    <nameField>
        <label>ReplayID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>