force-app/main/default/objects/RC_Business_Event__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>20</length>
    <type>Text</type>
</CustomField>