force-app/main/default/objects/RC_Business_Event__c/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <label>Flow API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>