force-app/main/default/objects/RC_Business_Event__c/fields/Flow_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Flow_Button_Label__c</fullName>
    <label>Flow Button Label</label>
    <length>30</length>
    <type>Text</type>
</CustomField>