force-app/main/default/objects/RC_Business_Event__c/fields/Link_Target__c.field-meta.xml
<CustomField>
    <fullName>Link_Target__c</fullName>
    <label>Link Target</label>
    <length>10</length>
    <type>Text</type>
</CustomField>