force-app/main/default/objects/RC_Business_Event__c/fields/Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Link_URL__c</fullName>
    <label>Link URL</label>
    <type>Url</type>
</CustomField>