force-app/main/default/objects/RC_Business_Event__c/fields/Record_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Record_Field_Label__c</fullName>
    <label>Record Field Label</label>
    <length>30</length>
    <type>Text</type>
</CustomField>