force-app/main/default/objects/RC_Business_Event__c/fields/Show_Toast__c.field-meta.xml
<CustomField>
    <fullName>Show_Toast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Toast</label>
    <type>Checkbox</type>
</CustomField>