force-app/main/default/objects/RC_Business_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>Event_Name__c</columns>
    <columns>Origin__c</columns>
    <columns>Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>